# MasterUang

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY-CHECKLIST.md  TRANSACTIONS-GUIDE.md  dbsetup.sql  index.html  package-lock.json  package.json  supabase-setup.sql  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1769955889803-e77c96e186e058.mjs
api/: ai_advisor.rs  ais-fetch.js  ais-proxy.js  analyze.rs  binance-proxy.js  cmc-proxy.js  finnhub-proxy.js  telemetry.rs  twelve-proxy.js
src/: App.vue  main.ts  style.css  vite-env.d.ts
src/components/: BinanceChart.vue  Captcha.vue  CryptoDashboard.vue  CryptoPrices.vue  FlightMap.vue  LeverageCalculator.vue  MarketIndices.vue  NotificationToast.vue  RedeemCodeForm.vue  ShipMap.vue  TradingChart.vue  VesselMapEmbed.vue
src/composables/: useAisPolling.ts  useAisStream.ts  useFlightTracking.ts  useMarketData.ts  useNotifications.ts  useSupabase.ts
src/config/: regions.ts
src/layouts/: MainLayout.vue
src/router/: index.ts
src/services/: api.ts  rustApi.ts
src/stores/: aisStore.ts  authStore.ts  binanceStore.ts  cryptoStore.ts  marketStore.ts  notificationStore.ts  transactionsStore.ts
src/views/: AdminView.vue  AiAdvisorView.vue  AuthView.vue  CryptoView.vue  DashboardView.vue  FlightTrackerView.vue  MarketView.vue  NewsView.vue  ProfileView.vue  ShipTrackerView.vue  TransactionsView.vue
