[package]
name = "masteruang-api"
version = "0.1.0"
edition = "2021"

[dependencies]
vercel_runtime = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
http-body-util = "0.1"
http = "1"

# ── Binary Targets ──────────────────────────────────
# Each [[bin]] maps to a Vercel Serverless Function endpoint.

[[bin]]
name = "analyze"
path = "api/analyze.rs"

[[bin]]
name = "telemetry"
path = "api/telemetry.rs"

[[bin]]
name = "ai_advisor"
path = "api/ai_advisor.rs"

# ── Release Optimizations (Low Cold Start) ──────────
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
